<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/present_food_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gravitas_one"
        android:text="@string/present_food"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/food_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/food_img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:contentDescription="@string/food_img_description"
        android:src="@drawable/default_food"
        app:layout_constraintBottom_toTopOf="@id/food_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/present_food_txt" />

    <TextView
        android:id="@+id/food_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gravitas_one"
        android:text="@string/default_food"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/main_btn_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_img" />

    <LinearLayout
        android:id="@+id/main_btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_txt">

        <Button
            android:id="@+id/reroll_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/copse"
            android:text="@string/reroll" />

        <Button
            android:id="@+id/more_info_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/copse"
            android:text="@string/more_info" />

        <Button
            android:id="@+id/edit_list_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/copse"
            android:text="@string/edit_list" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>