<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FoodListActivity">

    <TextView
        android:id="@+id/new_food_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_food"
        app:layout_constraintBottom_toBottomOf="@id/new_food_edit_txt"
        app:layout_constraintEnd_toStartOf="@id/new_food_edit_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_food_edit_txt" />

    <EditText
        android:id="@+id/new_food_edit_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:hint="@string/new_food_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_food_prompt"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@id/food_list_scroll"
        app:layout_constraintEnd_toStartOf="@id/remove_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_food_edit_txt" />

    <Button
        android:id="@+id/remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="@id/add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_btn"
        app:layout_constraintTop_toTopOf="@id/add_btn" />

    <ScrollView
        android:id="@+id/food_list_scroll"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_btn">

        <TextView
            android:id="@+id/food_list_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="32sp" />

    </ScrollView>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_list_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>